<resources>
    <string name="app_name">Secure Note</string>
    <string name="username_input_text">Username</string>
    <string name="password_input_text">Passphrase</string>
    <string name="login_button">Log in</string>
    <string name="register_button">Create account</string>
    <string name="welcome_text">Authenticate</string>

    <string name="register_text">Register</string>
    <string name="confirm_text">Confirm</string>
    <string name="pass_repear">Repeat passphrase</string>
    <string name="submit_new_account">Submit</string>
    <string name="updateNoteBtn">Save Note</string>
    <string name="change_password">Change passphrase</string>
    <string name="old_password">Current passphrase</string>
    <string name="new_password">New passphrase</string>
    <string name="password_tooltip">Best passphrases are long, quirky and memorable!</string>
    <string name="welcome">Welcome to Secure Note</string>
    <string name="app_info">Secure Note lets you save an encrypted note that nobody besides
                            you can access.</string>
    <string name="first_run">Before you start using the app, you need to specify a strong
                            passphrase that will be used to encrypt your note.</string>
    <string name="get_started_btn">Get started</string>
    <string name="add_fingerprint">Enable fingerprint authentication</string>
    <string name="add_fingerprint_tooltip">Your device has available fingerprint hardware that can
                                        be used to log into the application.</string>
    <string name="add_fingerprint_prompt">Do you want to use it in the app?</string>
    <string name="yes">Yes</string>
    <string name="no">Skip</string>
    <string name="finger_login">Log in using fingerprint</string>
    <string name="note_header">Your secure note</string>
</resources>